--- a/content/blogs/Abdullah_Rehman.Rmd
+++ b/content/blogs/Abdullah_Rehman.Rmd
@@ -36,16 +36,11 @@ I did my undergrad from [**University College London**](https://www.ucl.ac.uk) i
 
 During my spare time, I love to paint. I have an online profile at [Saatchi Art Gallery](https://www.saatchiart.com/account/artworks/1107889). I am attaching a few of them below and the rest can be seen on the link mentioned. I am also an avid chocolate enthusiast, I can skip any meal of the day except for dessert. 
 
-```{r, echo=FALSE,out.width="30%",fig.show='hold',fig.align='center',fig.cap="Figure 1.1"}
-knitr::include_graphics("/Users/abdullahrehman/Downloads/ART/IMG_1930.jpg")
-#include_graphics("/Users/abdullahrehman/Downloads/ART/IMG_1930.jpg")
-# include_graphics("/Users/abdullahrehman/Downloads/ART/IMG_5435.jpg")
 
+```{r picture, echo=FALSE, out.width="70%"}
+knitr::include_graphics("/img/IMG_1878.jpg", error = FALSE)
 ```
 
-```{r, echo=FALSE, out.width="30%", fig.cap="Figure 1.2",fig.show='hold',fig.align='center'}
-knitr::include_graphics("/Users/abdullahrehman/Downloads/ART/IMG_1878.jpg")
-```
 Figure 1.1 and 1.2 are some of my artworks which are oil on canvas.
 
 Below is a list of some of my favourite books. Although I don't get the time to read much these days, these books are still some of my favorites:
