--- a/content/blogs/Abdullah_Rehman.Rmd
+++ b/content/blogs/Abdullah_Rehman.Rmd
@@ -3,11 +3,11 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:26:09-05:00"
-description: Lorem Etiam Nullam
+description: This is a data analytics assignment 
 draft: false
 image: pic09.jpg
 keywords: ""
-slug: precourse
+slug: data
 title: Magna
 ---
 
