--- a/content/blogs/About_Me.Rmd
+++ b/content/blogs/About_Me.Rmd
@@ -19,14 +19,8 @@ My name is Abdullah Rehman as I have mentioned numerous times by now in this rep
 
 I did my undergrad from [**University College London**](https://www.ucl.ac.uk) in *Chemical Engineering* and graduated with a first class honors. After my undergrad, I was offered a job at Accenture which I was unable to take at the time due to a few serious family problems back home and I left England for 2 years until now. I am now keen on taking a full time consulting role and looking to do my best to earn a spot in the top tier firms. 
 
-During my spare time, I love to paint. I have an online profile at [Saatchi Art Gallery](https://www.saatchiart.com/account/artworks/1107889). I am attaching a few of them below and the rest can be seen on the link mentioned. I am also an avid chocolate enthusiast, I can skip any meal of the day except for dessert. 
+During my spare time, I love to paint. I have an online profile at [Saatchi Art Gallery](https://www.saatchiart.com/account/artworks/1107889). These artworks can be found in the art blogs section of this website. I am also an avid chocolate enthusiast, I can skip any meal of the day except for dessert. 
 
-
-```{r picture, echo=FALSE, out.width="70%"}
-knitr::include_graphics("/img/IMG_1878.jpg", error = FALSE)
-```
-
-Figure 1.1 and 1.2 are some of my artworks which are oil on canvas.
 
 Below is a list of some of my favourite books. Although I don't get the time to read much these days, these books are still some of my favorites:
 
