--- a/content/blogs/Resume.Rmd
+++ b/content/blogs/Resume.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T21:28:43-05:00"
 description: ""
 draft: false
-image: pic10.jpg
+# image: pic10.jpg
 keywords: ""
 slug: resume
 title: My CV
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## CV
 
-```{r picture, echo=FALSE, out.width="70%"}
+```{r picture, echo=FALSE}
+#, out.width="70%"
 knitr::include_graphics("/img/Resume.pdf", error = FALSE)
 ```
