--- a/content/blogs/Resume.Rmd
+++ b/content/blogs/Resume.Rmd
@@ -10,7 +10,6 @@ keywords: ""
 slug: resume
 title: My CV
 ---
---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -18,7 +17,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## CV
 
-```{r picture, echo=FALSE}
-#, out.width="70%"
+```{r picture, echo=FALSE, out.width="200%"}
 knitr::include_graphics("/img/Resume.pdf", error = FALSE)
 ```
