--- a/content/blogs/Resume.Rmd
+++ b/content/blogs/Resume.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T21:28:43-05:00"
 description: ""
 draft: false
-image: Resume.pdf
+image: 0001.jpg
 keywords: ""
 slug: resume
 title: My CV
@@ -19,5 +19,5 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r picture, echo=FALSE, out.width="100%",fig.align="center"}
  
-knitr::include_graphics("/img/Resume.pdf", error = FALSE)
+knitr::include_graphics("/img/Resumetheme.pdf", error = FALSE)
 ```
