--- a/content/blogs/myartblog.Rmd
+++ b/content/blogs/myartblog.Rmd
@@ -14,10 +14,21 @@ title: Art Portfolio
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 #image: pic08.jpg
+
+```
+
+My love for art stems from growing up in a household where my grandmother was an artist. She is one of my main inspirations for my artworks. 
+The artworks below are some of her work
+
+```{r photos, out.width="70%"}
+knitr::include_graphics("/img/ART/IMG_5567.jpg", error = FALSE)
+knitr::include_graphics("/img/ART/IMG_5564.heic", error = FALSE)
 ```
 
 
-```{r photos, out.width="70%"}
+The artworks below are my own work:
+
+```{r, out.width="70%"}
 knitr::include_graphics("/img/ART/IMG_1930.jpg", error = FALSE)
 knitr::include_graphics("/img/ART/IMG_5435.jpg", error = FALSE)
 knitr::include_graphics("/img/ART/IMG_5638.jpg", error = FALSE)
