--- a/content/blogs/myartblog.Rmd
+++ b/content/blogs/myartblog.Rmd
@@ -5,6 +5,7 @@ categories:
 date: "2017-10-31T22:26:13-05:00"
 description: This a collection of some of my published artworks to data.
 draft: false
+image: pic08.jpg
 keywords: ""
 slug: myartblog
 title: Art Portfolio
@@ -20,7 +21,7 @@ knitr::opts_chunk$set(echo = TRUE)
 My love for art stems from growing up in a household where my grandmother was an artist. She is one of my main inspirations for my artworks. 
 The artworks below are some of her work
 
-```{r photos,echo=FALSE}
+```{r photos,echo=FALSE, out.width="30%"}
 #out.width="70%"
 knitr::include_graphics("/img/ART/IMG_5567.jpg", error = FALSE)
 knitr::include_graphics("/img/ART/IMG_5564.jpg", error = FALSE)
