--- a/content/blogs/About_Me.Rmd
+++ b/content/blogs/About_Me.Rmd
@@ -5,12 +5,12 @@ categories:
 date: "2017-10-31T22:42:51-05:00"
 description: Find out a bit more about me
 draft: false
-image: pic14.jpg
+image: "https://giphy.com/embed/xT9IgH0fInLY2LCDPa"
 keywords: ""
 slug: about_me
 title: A Brief Introduction
 ---
-![](<iframe src="https://giphy.com/embed/xT9IgH0fInLY2LCDPa" width="480" height="352" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/trippy-glitch-space-xT9IgH0fInLY2LCDPa">via GIPHY</a></p>)
+![](<iframe src="https://giphy.com/embed/xT9IgH0fInLY2LCDPa" width="480" height="352" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/trippy-glitch-space-xT9IgH0fInLY2LCDPa">)
 
 # Short Biography
 ## A bit about me
