--- a/content/blogs/About_Me.Rmd
+++ b/content/blogs/About_Me.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T22:42:51-05:00"
 description: Find out a bit more about me
 draft: false
-image: "https://giphy.com/embed/xT9IgH0fInLY2LCDPa"
+image: https://giphy.com/embed/xT9IgH0fInLY2LCDPa
 keywords: ""
 slug: about_me
 title: A Brief Introduction
