--- a/content/blogs/Abdullah_Rehman.Rmd
+++ b/content/blogs/Abdullah_Rehman.Rmd
@@ -8,10 +8,10 @@ draft: false
 image: pic09.jpg
 keywords: ""
 slug: data
-title: Applied Statistics Assingemnt
+title: Applied Statistics Assignment
 ---
 
-<iframe src="https://giphy.com/embed/26tn33aiTi1jkl6H6" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/screen-monitor-closeup-26tn33aiTi1jkl6H6">
+<iframe src="https://giphy.com/embed/26tn33aiTi1jkl6H6" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
 
 
 ```{r load-libraries, warning=FALSE, message=FALSE, echo=FALSE}
