--- a/content/blogs/Abdullah_Rehman.Rmd
+++ b/content/blogs/Abdullah_Rehman.Rmd
@@ -19,7 +19,7 @@ library(janitor)
 library(knitr)
 library(ggplot2)
 library(kableExtra)
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 ```
 # Brexit vote analysis
 
