--- a/content/blogs/Travel_Blog.Rmd
+++ b/content/blogs/Travel_Blog.Rmd
@@ -15,7 +15,8 @@ title: My Travel Blog
 knitr::opts_chunk$set(echo = FALSE)
 library(knitr)    # For knitting document and include_graphics function
 library(ggplot2)  # For plotting
-library(png)      # For grabbing the 
+
+
 ```
 
 One of my biggest passions is travel and through my life, I have travelled to a number of countries.
@@ -24,8 +25,16 @@ One of my biggest passions is travel and through my life, I have travelled to a 
 
 My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:
 ```{r, echo = TRUE, out.width="30%"}
-myimages<-list.files("/img/PAK/", pattern = ".jpg", full.names = TRUE)
-include_graphics(myimages)
+# myimages <-list.files("img/PAK/", pattern = ".jpg", full.names = TRUE)
+# include_graphics(myimages)
+
+include_graphics("/img/PAK/IMG_9804.jpg", error = FALSE)
+include_graphics("/img/PAK/IMG_9837.jpg", error = FALSE)
+include_graphics("/img/PAK/IMG_9838.jpg", error = FALSE)
+include_graphics("/img/PAK/IMG_9839.jpg", error = FALSE)
+include_graphics("/img/PAK/IMG_9841.jpg", error = FALSE)
+include_graphics("/img/PAK/IMG_9853.jpg", error = FALSE)
+
 ```
 
 # France
