--- a/content/blogs/Travel_Blog.Rmd
+++ b/content/blogs/Travel_Blog.Rmd
@@ -24,7 +24,7 @@ One of my biggest passions is travel and through my life, I have travelled to a 
 # Pakistan
 
 My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:
-```{r, echo = TRUE, out.width="30%"}
+```{r, echo=FALSE, out.width='100%/3'}
 # myimages <-list.files("img/PAK/", pattern = ".jpg", full.names = TRUE)
 # include_graphics(myimages)
 
