--- a/content/blogs/Travel_Blog.Rmd
+++ b/content/blogs/Travel_Blog.Rmd
@@ -24,10 +24,10 @@ One of my biggest passions is travel and through my life, I have travelled to a 
 # Pakistan
 
 My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:
-```{r, echo=FALSE, out.width='50%/2'}
+
+```{r, echo=FALSE, out.width='100%/2', fig.align = "center", fig.cap='(ref:foo-caption)', fig.scap='(ref:foo-scaption)'}
 # myimages <-list.files("img/PAK/", pattern = ".jpg", full.names = TRUE)
 # include_graphics(myimages)
-
 include_graphics("/img/PAK/IMG_9804.jpg", error = FALSE)
 include_graphics("/img/PAK/IMG_9837.jpg", error = FALSE)
 # include_graphics("/img/PAK/IMG_9838.jpg", error = FALSE)
@@ -36,7 +36,6 @@ include_graphics("/img/PAK/IMG_9837.jpg", error = FALSE)
 # include_graphics("/img/PAK/IMG_9853.jpg", error = FALSE)
 
 ```
-
 
 ```{r, echo=FALSE, out.width='50%/4'}
 include_graphics("/img/PAK/IMG_9838.jpg", error = FALSE)
@@ -52,5 +51,3 @@ include_graphics("/img/PAK/IMG_9853.jpg", error = FALSE)
 # Scotland
 
 # India
-
-
