--- a/content/blogs/Travel_Blog.Rmd
+++ b/content/blogs/Travel_Blog.Rmd
@@ -25,11 +25,11 @@ One of my biggest passions is travel and through my life, I have travelled to a 
 
 My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:
 
-```{r, echo=FALSE, out.width='50%/2', fig.align = "center", fig.cap='(ref:foo-caption)', fig.scap='(ref:foo-scaption)'}
-# myimages <-list.files("img/PAK/", pattern = ".jpg", full.names = TRUE)
-# include_graphics(myimages)
+```{r, echo=FALSE, out.width='50%/2', fig.align = "center", fig.cap=1:2, fig.scap='(ref:foo-scaption)'}
+
 include_graphics("/img/PAK/IMG_9804.jpg", error = FALSE)
 include_graphics("/img/PAK/IMG_9837.jpg", error = FALSE)
+
 # include_graphics("/img/PAK/IMG_9838.jpg", error = FALSE)
 # include_graphics("/img/PAK/IMG_9839.jpg", error = FALSE)
 # include_graphics("/img/PAK/IMG_9841.jpg", error = FALSE)
