--- a/content/blogs/Travel_Blog.Rmd
+++ b/content/blogs/Travel_Blog.Rmd
@@ -25,7 +25,7 @@ One of my biggest passions is travel and through my life, I have travelled to a 
 
 My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:
 
-```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: #9ecff7;padding:10px"'}
+```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
 
 
 include_graphics("/img/PAK/IMG_9804.jpg", error = FALSE)
