--- a/content/blogs/Travel_Blog.Rmd
+++ b/content/blogs/Travel_Blog.Rmd
@@ -29,7 +29,6 @@ My latest trip was in Pakistan where I went upnorth to the beautiful area of Kas
 
 
 include_graphics("/img/PAK/IMG_9804.jpg", error = FALSE)
-
 include_graphics("/img/PAK/IMG_9837.jpg", error = FALSE)
 
 ```
@@ -37,8 +36,6 @@ include_graphics("/img/PAK/IMG_9837.jpg", error = FALSE)
 
 ```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
 include_graphics("/img/PAK/IMG_9838.jpg", error = FALSE)
-
-
 include_graphics("/img/PAK/IMG_9839.jpg", error = FALSE)
 ```
 
@@ -46,13 +43,27 @@ include_graphics("/img/PAK/IMG_9839.jpg", error = FALSE)
 ```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
 
 include_graphics("/img/PAK/IMG_9841.jpg", error = FALSE)
-
-
 include_graphics("/img/PAK/IMG_9853.jpg", error = FALSE)
 ```
 
 # France
 
+
+```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
+
+
+include_graphics("/img/FRANCE/IMG_2657.jpg", error = FALSE)
+include_graphics("/img/FRANCE/IMG_2661.jpg", error = FALSE)
+
+```
+
+```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
+
+
+include_graphics("/img/FRANCE/IMG_2714.jpg", error = FALSE)
+include_graphics("/img/FRANCE/IMG_2792.jpg", error = FALSE)
+
+```
 # Switzerland
 
 # Scotland
